--- a/src/main/resources/templates/perspective/perspective-view.html
+++ b/src/main/resources/templates/perspective/perspective-view.html
@@ -470,7 +470,7 @@
                                     </span>
                             </tr>
                             <tr>
-                                <td style="width: 200px; text-align: left">% расц. позиций</td>
+                                <td style="width: 200px; text-align: left">Доля расц. позиций</td>
                                 <td style="text-align: left">
                                     <span th:with="x=${perspectiveObject.percentOfSuccess != null}">
                                         <span th:if="${x}">
