update html forms

--- a/src/main/resources/templates/constr_control/constr_control-create.html
+++ b/src/main/resources/templates/constr_control/constr_control-create.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
-    <title>Arrow</title>
+    <title>WebInterface</title>
 </head>
 <body>
 <div class="tableContainer m-4" style="font-size: 15px">
