--- a/src/main/resources/templates/department/department-update.html
+++ b/src/main/resources/templates/department/department-update.html
@@ -7,7 +7,7 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.min.css">
-    <title>Arrow</title>
+    <title>WebInterface</title>
     <style>
         .table {
             display: block;
