--- a/src/main/resources/templates/stock/m_instrument-com_table.html
+++ b/src/main/resources/templates/stock/m_instrument-com_table.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Arrow</title>
+    <title>WebInterface</title>
     <style>
         .main-table {
             display: block;
@@ -507,8 +507,9 @@
             rows.forEach(row => {
                 const cell1 = row.cells[3].textContent;
                 const cell2 = row.cells[4].innerText;
-                const showRow = (selectedValues1.length === 0 || selectedValues1.includes(cell1)) &&
-                    (selectedValues2.length === 0 || selectedValues2.includes(cell2));
+                const showRow =
+                    (selectedValues1.length === 0 || selectedValues1.some(e => cell1.includes(e))) &&
+                    (selectedValues2.length === 0 || selectedValues2.some(e => cell2.includes(e)));
                 row.style.display = showRow ? '' : 'none';
             });
         }
