--- a/src/main/resources/templates/user/user-menu.html
+++ b/src/main/resources/templates/user/user-menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- Bootstrap 5.3 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Arrow</title>
+    <title>WebInterface</title>
     <style>
         .main-table {
             display: block;
