--- a/src/main/resources/templates/vocation/vocation-menu.html
+++ b/src/main/resources/templates/vocation/vocation-menu.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap 5.3 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Document</title>
+    <title>WebInterface</title>
     <style>
         .main-table {
             display: block;
